2016-06-25  Uwe Schulzweida

	* using CDI library version 1.7.2
	* Version 1.7.2 released

2016-06-21  Uwe Schulzweida

	* Renamed operator setpartab to setcodetab

2016-06-13  Uwe Schulzweida

	* mul: wrong result for missval*0 (bug fix)
	* expr: nmiss lost for time constant fields (bug fix)

2016-06-07  Uwe Schulzweida

	* select: file structure may change with time constant variables (bug fix)
	* select: wrong result with time constant 3D variables (bug fix)

2016-06-02  Uwe Schulzweida

	* input: added optional zaxis parameter

2016-05-27   Asela Rajapakse

	* New operator verifygrid - Verify grids

2016-05-25  Uwe Schulzweida

	* CDO_CommandLine: changed from fixed size of 1024 to dynamic size
	* uv2dv: ignore GRIB2 parameter id

2016-05-20  Uwe Schulzweida

	* Select: check level only if no vars selected

2016-04-28  Uwe Schulzweida

	* readline: added support for DOS text files (\r\n)

2016-04-26  Uwe Schulzweida

	* New operator: smooth - Smooth grid points

2016-04-25  Uwe Schulzweida

	* New operator: ap2hl - Air pressure to height level interpolation
	* Added option --cmor to write CMOR conform NetCDF output
	* setpartabn - added support for character # and ! deactivate line in table file

2016-04-19  Uwe Schulzweida

	* Adjust date/time by -1 second if the verification time is equal to upper time bound

2016-04-13  Uwe Schulzweida

	* gridsearch_qnearest: removed range check (bug fix)
	* grid_search_nbr: set range0 to SQR(search_radius) (bug fix)

2016-04-11  Uwe Schulzweida

	* Magplot: set NAN missvals to -9e33 [Bug: #6677]

2016-04-08  Uwe Schulzweida

	* afterburner: seg. fault with data on half level (bug fix) [report: Monika Esch]

2016-04-04  Ralf Mueller

        * New operators: ngrids, ngridpoints - Show number of grids/gridpoints per variable

2016-04-02  Uwe Schulzweida

	* Fix typo in eca_sdii code [Bug #6655]

2016-03-27  Uwe Schulzweida

 	* clipping/geometry.h::get_angle: replace round() by lround()
